# lila-learn

./: README.md
backend/: main.py  pyproject.toml
backend/lilalearn/: pyproject.toml
backend/lilalearn/src/database/: ddb_client.py
backend/lilalearn/src/extract_sources/: currents_api.py
backend/lilalearn/src/lilalearn/: __init__.py
backend/lilalearn/src/translation-backends/: llm_translate.py
frontend/: README.md  package-lock.json  package.json
frontend/src/: App.tsx  Reader.tsx  extract.ts  utils.ts
