[project]
name = "lilalearn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "reuzed", email = "49994279+reuzed@users.noreply.github.com" }
]
requires-python = ">=3.11"
dependencies = []

[project.scripts]
lilalearn = "lilalearn:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
